# sessionat

./: ARCHITECTURE.md  BUILDING.md  LICENSE  NOTICE  README.md  SECURITY.md
chromium-patches/chrome/: chrome_paks.gni
chromium-patches/chrome/app/: app-Info.plist  chrome_command_ids.h  chromium_strings.grd  settings_chromium_strings.grdp  settings_strings.grdp
chromium-patches/chrome/browser/: BUILD.gn  global_keyboard_shortcuts_mac.mm
chromium-patches/chrome/browser/prefs/: BUILD.gn  browser_prefs.cc
chromium-patches/chrome/browser/renderer_context_menu/: BUILD.gn  render_view_context_menu.cc  render_view_context_menu.h  sessionat_page_workspace_submenu.cc  sessionat_page_workspace_submenu.h
chromium-patches/chrome/browser/resources/: BUILD.gn
chromium-patches/chrome/browser/resources/sessionat_analytics/: BUILD.gn  sessionat_analytics.css  sessionat_analytics.html  sessionat_analytics.js
chromium-patches/chrome/browser/resources/sessionat_mcp/: BUILD.gn  sessionat_mcp.css  sessionat_mcp.html  sessionat_mcp.js
chromium-patches/chrome/browser/resources/sessionat_ntp/: BUILD.gn  sessionat_ntp.css  sessionat_ntp.html  sessionat_ntp.js
chromium-patches/chrome/browser/resources/sessionat_quickswitch/: BUILD.gn  sessionat_quickswitch.css  sessionat_quickswitch.html  sessionat_quickswitch.js
chromium-patches/chrome/browser/resources/sessionat_workspaces/: BUILD.gn  sessionat_workspaces.css  sessionat_workspaces.html  sessionat_workspaces.js
chromium-patches/chrome/browser/search/: search.cc
chromium-patches/chrome/browser/sessionat/: BUILD.gn  session_history_service.cc  session_history_service.h  session_history_service_factory.cc  session_history_service_factory.h  visit_analytics_service.cc  visit_analytics_service.h  visit_analytics_service_factory.cc  visit_analytics_service_factory.h  visit_analytics_tab_helper.cc  visit_analytics_tab_helper.h  workspace_model.cc  workspace_model.h  workspace_service.cc  workspace_service.h  workspace_service_factory.cc  workspace_service_factory.h
chromium-patches/chrome/browser/sessionat/mcp/: BUILD.gn  claude_config_manager.cc  claude_config_manager.h  client_config_manager.cc  client_config_manager.h  client_token_registry.cc  client_token_registry.h  mcp_service.cc  mcp_service.h  mcp_service_factory.cc  mcp_service_factory.h  mcp_tools.cc  mcp_tools.h  write_grants.cc  write_grants.h
chromium-patches/chrome/browser/sessionat/mcp/client_writers/: claude_code_writer.cc  claude_desktop_writer.cc  codex_writer.cc  cursor_writer.cc  vscode_writer.cc  windsurf_writer.cc  writer_common.cc  writer_common.h
chromium-patches/chrome/browser/ui/: BUILD.gn  browser_command_controller.cc  sparkle.gni  tab_helpers.cc
chromium-patches/chrome/browser/ui/startup/: infobar_utils.cc
chromium-patches/chrome/browser/ui/tabs/: BUILD.gn  features.cc  tab_menu_model.cc  tab_menu_model.h  tab_strip_model.cc  tab_strip_model.h  tab_strip_prefs.cc  workspace_sub_menu_model.cc  workspace_sub_menu_model.h
chromium-patches/chrome/browser/ui/views/frame/: browser_view.cc  browser_view.h
chromium-patches/chrome/browser/ui/views/tabs/vertical/: vertical_tab_strip_bottom_container.cc
chromium-patches/chrome/browser/ui/webui/: BUILD.gn  chrome_web_ui_configs.cc  favicon_source.cc
chromium-patches/chrome/browser/ui/webui/help/: version_updater_mac.mm
chromium-patches/chrome/browser/ui/webui/sessionat_analytics/: BUILD.gn  sessionat_analytics_ui.cc  sessionat_analytics_ui.h
chromium-patches/chrome/browser/ui/webui/sessionat_mcp/: BUILD.gn  sessionat_mcp_ui.cc  sessionat_mcp_ui.h
chromium-patches/chrome/browser/ui/webui/sessionat_ntp/: BUILD.gn  sessionat_ntp_ui.cc  sessionat_ntp_ui.h
chromium-patches/chrome/browser/ui/webui/sessionat_quickswitch/: BUILD.gn  sessionat_quickswitch_ui.cc  sessionat_quickswitch_ui.h
chromium-patches/chrome/browser/ui/webui/sessionat_workspaces/: BUILD.gn  sessionat_workspaces_ui.cc  sessionat_workspaces_ui.h
chromium-patches/chrome/common/: features.gni  url_constants.h  webui_url_constants.h
chromium-patches/chrome/updater/: branding.gni
chromium-patches/components/: components_chromium_strings.grd
chromium-patches/components/resources/: sample_credits.html
chromium-patches/extensions/: external_install_manager.cc  initial_external_extension_loader.cc
chromium-patches/preferences/: README.md  auto_enable_sessionat_extension.cc  external_install_manager.patch  initial_preferences  session_restore_infobar_icon.patch  sessionat_default_extensions.cc  sessionat_default_extensions.h  sessionat_force_enable_extension.patch  sessionat_policies.json
chromium-patches/tools/gritsettings/: resource_ids.spec
chromium-patches/ui/gfx/: color_palette.h
chromium-patches/ui/webui/resources/cr_elements/: cr_shared_vars.css
chromium-patches/workspaces/chrome/app/: generated_resources.grd
chromium-patches/workspaces/chrome/browser/profiles/: chrome_browser_main_extra_parts_profiles.cc
chromium-patches/workspaces/chrome/browser/sessionat/: BUILD.gn  workspace_model.cc  workspace_model.h  workspace_service.cc  workspace_service.h  workspace_service_factory.cc  workspace_service_factory.h
chromium-patches/workspaces/chrome/browser/ui/views/frame/: horizontal_tab_strip_region_view.cc  horizontal_tab_strip_region_view.h
chromium-patches/workspaces/chrome/browser/ui/views/tabs/: workspace_tab_strip_button.cc  workspace_tab_strip_button.h
