# Copyright 2026 Sessionat. All rights reserved.
# Resources for chrome://sessionat-workspaces/

import("//chrome/common/features.gni")
import("//tools/grit/grit_rule.gni")
import("//ui/webui/resources/tools/generate_grd.gni")

assert(!is_android)
assert(!is_fuchsia, "Fuchsia shouldn't use anything in //chrome")

grit("resources") {
  defines = chrome_grit_defines
  enable_input_discovery_for_gn_analyze = false
  source = "$target_gen_dir/resources.grd"
  deps = [ ":build_grd" ]
  outputs = [
    "grit/sessionat_workspaces_resources.h",
    "grit/sessionat_workspaces_resources_map.h",
    "grit/sessionat_workspaces_resources_map.cc",
    "sessionat_workspaces_resources.pak",
  ]
  output_dir = "$root_gen_dir/chrome"
}

generate_grd("build_grd") {
  grd_prefix = "sessionat_workspaces"
  out_grd = "$target_gen_dir/resources.grd"
  input_files = [
    "sessionat_workspaces.html",
    "sessionat_workspaces.css",
    "sessionat_workspaces.js",
  ]
  input_files_base_dir = rebase_path(".", "//")
}
