# Copyright 2026 Sessionat. All rights reserved.
# Sessionat embedded MCP (Model Context Protocol) server.

source_set("mcp") {
  sources = [
    "client_config_manager.cc",
    "client_config_manager.h",
    "client_token_registry.cc",
    "client_token_registry.h",
    "client_writers/claude_code_writer.cc",
    "client_writers/claude_desktop_writer.cc",
    "client_writers/codex_writer.cc",
    "client_writers/cursor_writer.cc",
    "client_writers/vscode_writer.cc",
    "client_writers/windsurf_writer.cc",
    "client_writers/writer_common.cc",
    "client_writers/writer_common.h",
    "mcp_service.cc",
    "mcp_service.h",
    "mcp_service_factory.cc",
    "mcp_service_factory.h",
    "mcp_tools.cc",
    "mcp_tools.h",
    "write_grants.cc",
    "write_grants.h",
  ]

  public_deps = [ "//chrome/browser:browser_public_dependencies" ]

  deps = [
    "//base",
    "//chrome/browser/profiles:profile",
    "//chrome/browser/sessionat",
    "//chrome/common",
    "//components/input",
    "//components/keyed_service/core",
    "//components/pref_registry",
    "//components/prefs",
    "//components/viz/common",
    "//net",
    "//skia",
    "//third_party/blink/public/common:headers",
    "//ui/events:dom_keycode_converter",
    "//ui/events:events_base",
    "//ui/gfx",
    "//ui/gfx/codec",
    "//ui/gfx/geometry",
    "//url",
  ]
}
